# bill-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/logo/: brand-showcase.html
bill_extract/: __init__.py  config.py  extractor.py  logging.py  main.py  ocr.py  ollama_client.py  patterns.yaml  preprocess.py  utils.py
scripts/: e2e_test.sh
tests/: README.md  conftest.py  generate_samples.py  test_config.py  test_extract.py  test_extractor_patterns.py  test_field_extraction.py  test_logging.py  test_main.py  test_main_simple.py  test_ocr.py  test_ollama.py  test_preprocess.py  test_snapshot.py
tests/samples/: golden_dataset.json
tests/snapshots/: test_nulls.json  test_snapshot.json
