[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bill-extract"
version = "0.1.0"
description = "Extract information from bills and invoices using OCR"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MontImage Team", email = "contact@montimage.com"}
]
keywords = ["ocr", "invoice", "bill", "extraction", "paddleocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.0",
]
paddle = [
    "paddleocr==3.5.0; python_version<'3.14'",
    "paddlepaddle==3.3.1; python_version<'3.14'",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-snapshot>=0.9.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
bill-extract = "bill_extract.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bill_extract*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.bandit]
exclude_dirs = ["tests"]
